syntax = "proto3";

package trade;

option go_package = "./trade";

message CreateTradeRequest {
  int64 user_id = 1;
  int64 product_id = 2;
  int64 quantity = 3;
}

message CreateTradeResponse {
  int64 trade_id = 1;
  int64 user_id = 2;
  int64 product_id = 3;
  int64 quantity = 4;
  float total_amount = 5;
  string status = 6;
  string instance_id = 7; // 实例ID，用于验证负载均衡
}

message GetInstanceInfoRequest {
}

message GetInstanceInfoResponse {
  string instance_id = 1;
  string listen_on = 2;
}

service Trade {
  rpc CreateTrade(CreateTradeRequest) returns (CreateTradeResponse);
  rpc GetInstanceInfo(GetInstanceInfoRequest) returns (GetInstanceInfoResponse);
}

